--- a/index.html
+++ b/index.html
@@ -1,123 +1,185 @@
-<!DOCTYPE html><html data-scrapbook-source="https://hyperliquid-site.github.io/" data-scrapbook-create="20250610111057658" data-scrapbook-title="Hyperliquid"><head>
+<!DOCTYPE html><html data-scrapbook-source="https://hyperliquid-site.github.io/" data-scrapbook-create="20250610111057658" data-scrapbook-title="Tron Staking"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Hyperliquid</title>
-    <meta name="description" content="Hyperliquid is a decentralized trading platform built on its own high-performance blockchain. The team behind it originally started in 2020.">
+    <meta name="description" content="Stake your Tron tokens and earn passive income for holding Tron (TRX) while contributing to the Tron blockchain.">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="@Hyperliquid">
-    <meta name="twitter:creator" content="@Hyperliquid">
-    <meta name="keywords" content="Hyperliquid">
-    <meta property="og:title" content="Hyperliquid">
-    <meta property="og:description" content="Hyperliquid is a performant blockchain built with the vision of a fully onchain open financial system.">
-    <meta property="og:url" content="https://hyperliquid-app.net/ ">
+    <meta name="twitter:site" content="@Tron Staking">
+    <meta name="twitter:creator" content="@Tron Staking">
+    <meta name="keywords" content="Tron Staking">
+    <meta property="og:title" content="Tron Staking">
+    <meta property="og:description" content="Explore the best options to stake your Tron. Compare TRX staking reward rates, track performance & find the best provider to stake.">
+    <meta property="og:url" content="">
     <meta property="og:type" content="website">
     <meta property="og:image" content="header.jpg">
-    <meta property="og:image:alt" content="Hyperliquid">
-    <link rel="canonical" href="https://hyperliquid-app.net/">
-    <link rel="icon" type="image/x-icon" href="vKLEZxhh_400x400.png" alt="Hyperliquid">
+    <meta property="og:image:alt" content="Tron Staking">
+    <link rel="canonical" href="">
+    <link rel="icon" type="image/x-icon" href="ic_crypto_trx.png" alt="Tron Staking">
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
     <div class="container">
-        <a href="https://hyperliquid-app.net/" target="_blank" style="text-decoration: none;">
-  <h1>Hyperliquid: The Future of Decentralized Perpetual Trading</h1>
+        <a href="" target="_blank" style="text-decoration: none;">
+  <h1>Tron Staking - the Future of Crypto Staking in 2025</h1>
 </a>
 
 <div class="icenter">
-  <a href="https://hyperliquid-app.net/" target="_blank">
-    <img src="renbridge%20-%202025-06-09T055159.206.png" alt="Hyperliquid">
+  <a href="" target="_blank">
+    <img src="polygon Bridge (82).png" alt="Tron Staking">
   </a>
 </div>
 
-<h2>Introduction Hyperliquid App:</h2>
-<p><a href="https://hyperliquid-app.net/" target="_blank">Hyperliquid</a> is a decentralized, high-performance derivatives exchange built to provide fast, scalable, and permissionless perpetual trading. It enables traders to gain exposure to a variety of crypto assets with high efficiency and low latency, all while maintaining full custody of their assets.</p>
+<h2>Introduction to Tron Staking</h2>
+<p>
+  <strong>Tron Staking</strong> is a decentralized, user-friendly process that enables holders of TRX tokens to earn passive income by participating in the Tron network's consensus and governance. By locking up (staking) your TRX, you contribute to network security and decentralization while receiving regular staking rewards. As a core mechanism in the <a href="https://en.wikipedia.org/wiki/Decentralized_finance" target="_blank" rel="nofollow">DeFi</a> ecosystem, Tron staking offers both accessibility and robust returns for retail and institutional investors.
+</p>
 
-<h2>What is <a href="https://hyperliquid-app.net/" target="_blank">Hyperliquid</a>?</h2>
-<p><a href="https://hyperliquid-app.net/" target="_blank">Hyperliquid</a> is a Layer 1 exchange designed from the ground up to optimize for performance without sacrificing decentralization. Unlike many decentralized exchanges that depend on Ethereum or Layer 2 scaling solutions, Hyperliquid operates its own custom chain, enabling extremely low fees and sub-second finality.</p>
+<h2>What is Tron Staking?</h2>
+<p>
+  Tron Staking allows users to delegate or "freeze" their TRX tokens to support Super Representatives (SRs), who validate transactions and produce blocks. In return, stakers receive rewards in TRX and sometimes other tokens. The process is fully non-custodial, meaning you always retain ownership of your tokens, which are secured on-chain through audited smart contracts.
+</p>
+
+<div class="icenter">
+  <img src="1.png" alt="Tron Staking Interface">
+</div>
 
 <ul>
-  <li><span class="checkmark">✅</span> No gas fees for trading</li>
-  <li><span class="checkmark">✅</span> Lightning-fast order execution</li>
-  <li><span class="checkmark">✅</span> High leverage on perpetual contracts</li>
-  <li><span class="checkmark">✅</span> Decentralized and non-custodial</li>
+  <li>Non-custodial staking directly from your own wallet</li>
+  <li>Daily rewards paid out in TRX</li>
+  <li>Support for top wallets, including Trust Wallet</li>
+  <li>Active community governance via voting for Super Representatives</li>
 </ul>
 
-<h2>Hyperliquid App Key Features:</h2>
+<h2>Why Tron Staking Stands Out</h2>
 <ul>
-  <li><strong>Performance:</strong> Sub-second trade finality and deep liquidity.</li>
-  <li><strong>Accessibility:</strong> No KYC or account creation required—connect and trade.</li>
-  <li><strong>Security:</strong> Self-custody of funds, no centralized intermediaries.</li>
-  <li><strong>Custom Engine:</strong> Built on a high-speed custom Layer 1 optimized for DeFi trading.</li>
-  <li><strong>UI &amp; UX:</strong> Professional trading experience with charts, limit orders, and risk management tools.</li>
+  <li><strong>Accessibility:</strong> Stake from popular wallets and dApps, including Trust Wallet</li>
+  <li><strong>Low Entry Barrier:</strong> No minimum staking amount required</li>
+  <li><strong>Security:</strong> Tokens remain in your wallet, protected by on-chain smart contracts</li>
+  <li><strong>Transparency:</strong> Real-time reward tracking and SR performance analytics</li>
 </ul>
 
 <div class="icenter">
-  <a href="https://hyperliquid-app.net/" target="_blank">
-    <img src="Screenshot_3.png" alt="Hyperliquid Trading">
-  </a>
+  <img src="2.png" alt="Tron Staking Analytics">
 </div>
 
-<h2>Step-by-Step Guide: How to Use Hyperliquid App for Perpetual Trading</h2>
+<h2>Tron Staking User Experience Reviews and Community Sentiment</h2>
+<p>
+  User feedback across DeFi communities highlights Tron staking for its speed, ease of use, and frequent reward payouts. On Reddit and Discord, users mention the flexibility of staking and unstaking TRX at any time, and the reliable integration with wallets like Trust Wallet. A typical review states, "Staking Tron is straightforward, and the daily rewards add up quickly—especially using Trust Wallet’s interface."
+</p>
+
+<h2>Tron Staking Features Comparison</h2>
+<table>
+  <thead>
+    <tr>
+      <th>Feature</th>
+      <th>Tron Staking</th>
+      <th>Other Networks</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Non-Custodial</td>
+      <td>Yes</td>
+      <td>Varies</td>
+    </tr>
+    <tr>
+      <td>Reward Frequency</td>
+      <td>Daily</td>
+      <td>Weekly/Monthly</td>
+    </tr>
+    <tr>
+      <td>Supported Wallets</td>
+      <td>Trust Wallet, TronLink, Ledger, more</td>
+      <td>Varies</td>
+    </tr>
+    <tr>
+      <td>Staking Minimum</td>
+      <td>None</td>
+      <td>Often Required</td>
+    </tr>
+    <tr>
+      <td>Governance Participation</td>
+      <td>Voting for Super Representatives</td>
+      <td>Validator Delegation</td>
+    </tr>
+    <tr>
+      <td>Audit Status</td>
+      <td>Audited</td>
+      <td>Varies</td>
+    </tr>
+  </tbody>
+</table>
+
+<div class="icenter">
+  <img src="3.png" alt="Tron Staking App">
+</div>
+
+<h2>Step-by-Step Guide: How to Stake Tron with Trust Wallet</h2>
 <ol>
-  <li><strong>Step 1 – Visit:</strong> Go to <a href="https://hyperliquid-app.net/" target="_blank">Hyperliquid</a> using a modern browser.</li>
-  <li><strong>Step 2 – Connect Your Wallet:</strong> Use MetaMask or WalletConnect to sign in securely.</li>
-  <li><strong>Step 3 – Deposit Funds:</strong> Bridge assets (e.g., USDC) into the Hyperliquid App environment.</li>
-  <li><strong>Step 4 – Select a Market:</strong> Choose a crypto pair like BTC/USDC or ETH/USDC.</li>
-  <li><strong>Step 5 – Set Leverage:</strong> Adjust the leverage slider to control your risk.</li>
-  <li><strong>Step 6 – Place Your Trade:</strong> Use market or limit orders and monitor your positions live.</li>
-  <li><strong>Step 7 – Withdraw Funds:</strong> When ready, close positions and withdraw back to your wallet.</li>
+  <li><strong>Install Trust Wallet:</strong> Download and install Trust Wallet from the official app store.</li>
+  <li><strong>Deposit TRX:</strong> Add TRX tokens to your Trust Wallet address.</li>
+  <li><strong>Open Staking Section:</strong> In the Trust Wallet app, select TRX and tap "More" to find the staking option.</li>
+  <li><strong>Choose a Super Representative:</strong> Browse the list of Super Representatives and select one to delegate your TRX.</li>
+  <li><strong>Stake (Freeze) TRX:</strong> Enter the amount to stake and confirm. Your tokens will be frozen and start participating in consensus.</li>
+  <li><strong>Track Rewards:</strong> Use Trust Wallet’s dashboard to monitor earned rewards and unfreeze your tokens anytime.</li>
 </ol>
 
-<h2>Core Features of the Hyperliquid App for Traders</h2>
-<ul>
-  <li><strong>Zero Gas Trading:</strong> No gas fees for placing or executing trades.</li>
-  <li><strong>Lightning-Speed Execution:</strong> Built on a custom Layer 1 with sub-second finality.</li>
-  <li><strong>Self-Custodial:</strong> Funds remain in your control at all times.</li>
-  <li><strong>Leverage:</strong> Trade with leverage on dozens of popular tokens.</li>
-  <li><strong>Advanced Interface:</strong> Limit orders, charts, PnL tracking, and pro-grade analytics.</li>
-</ul>
-<div class="icenter">
-  <a href="https://hyperliquid-app.net/" target="_blank">
-    <img src="Screenshot_4.png" alt="Hyperliquid Staking">
-  </a>
-</div>
+<h2>Tron Staking Analytics and Market Sentiment</h2>
+<p>
+  According to <a href="https://www.coingecko.com/en/coins/tron" target="_blank" rel="nofollow">CoinGecko</a> and <a href="https://coinmarketcap.com/currencies/tron/" target="_blank" rel="nofollow">CoinMarketCap</a>, Tron’s staking volume and active addresses continue to grow in 2024–2025, showing strong network adoption. <a href="https://messari.io/asset/tron" target="_blank" rel="noopener noreferrer">Messari</a> research highlights Tron’s low fees and high transaction throughput as key drivers for staking popularity.
+</p>
 
-<h2>Why Use Hyperliquid?</h2>
+<h2>Authoritative Sources for Tron Staking:</h2>
 <ul>
-  <li><strong>Decentralization:</strong> True on-chain order books and matching engine.</li>
-  <li><strong>Speed:</strong> Competes with centralized exchanges in latency and execution.</li>
-  <li><strong>Fairness:</strong> Transparent pricing and fully auditable transactions on-chain.</li>
-  <li><strong>No Front-Running:</strong> Custom architecture prevents MEV and sandwich attacks.</li>
+  <li><a href="https://messari.io/asset/tron" target="_blank" rel="nofollow">Messari</a></li>
+  <li><a href="https://en.wikipedia.org/wiki/Tron_(cryptocurrency)" target="_blank" rel="nofollow">Wikipedia on Tron</a></li>
 </ul>
 
 <div class="icenter">
-  <a href="https://hyperliquid-app.net/" target="_blank">
-    <img src="Screenshot_1.png" alt="Hyperliquid App">
-  </a>
+  <img src="4.png" alt="Tron Staking UI">
 </div>
 
-<h2>Hyperliquid Security:</h2>
-<p>All trades and collateral management are handled via smart contracts and validated by Hyperliquid’s custom consensus. Users always retain control over their funds, making Hyperliquid a secure choice for DeFi traders looking to avoid centralized risks.</p>
+<h2>Frequently Asked Questions (FAQ) – Tron Staking</h2>
+<h3>Is Tron Staking Safe?</h3>
+<p>
+  Yes. Tron staking is audited and fully on-chain, with funds remaining in your own wallet at all times.
+</p>
 
-<h2>Supported Assets:</h2>
-<p>Hyperliquid supports perpetual contracts for a wide range of crypto assets including BTC, ETH, SOL, AVAX, and more. The list is continuously expanding to support emerging market demand.</p>
+<h3>What Wallets Can I Use?</h3>
+<p>
+  Popular wallets like Trust Wallet, TronLink, and Ledger support TRX staking.
+</p>
 
-<h2>Trading Experience on the Hyperliquid App</h2>
-<p>The Hyperliquid interface is intuitive yet powerful. Traders can use technical indicators, trading history, advanced order types, and leaderboard tracking to optimize performance. With no gas costs and full wallet integration, it's the smoothest trading experience in DeFi.</p>
+<h3>How Long Does Staking Take?</h3>
+<p>
+  Staking and unstaking operations on Tron are fast—typically just a few minutes.
+</p>
+
+<h3>Are There Any Fees?</h3>
+<p>
+  Staking itself has no direct fees, but standard Tron network transaction fees apply.
+</p>
+
+<h3>Can I Unstake Anytime?</h3>
+<p>
+  Yes, you can unfreeze your TRX whenever you like. Note that there may be a short unfreezing period before tokens become transferable.
+</p>
+
+<h3>Where Can I Track My Rewards?</h3>
+<p>
+  Trust Wallet provides a real-time dashboard to track earned staking rewards and manage your TRX.
+</p>
 
 <div class="icenter">
-  <a href="https://hyperliquid-app.net/" target="_blank">
-    <img src="Screenshot_2.png" alt="Hyperliquid">
-  </a>
+  <img src="5.png" alt="Tron Staking FAQ">
 </div>
-<h2>Final Thoughts:</h2>
-<p><a href="https://hyperliquid-app.net/" target="_blank">Hyperliquid</a> represents a next-generation DEX designed for high-frequency, leveraged trading. Its custom-built chain, fast performance, and permissionless access model make it a powerful tool for DeFi-native traders who want the speed of CEXs with the security of decentralization.</p>
 
-<div class="tip">💡 Pro Tip: Use Hyperliquid’s leaderboard and analytics to follow top-performing traders and improve your own strategies.</div>
+<h2>Conclusion</h2>
+<p>
+  Tron staking offers a secure, flexible, and non-custodial way to earn rewards while supporting network decentralization. Thanks to integration with wallets like Trust Wallet, both new and experienced crypto users can easily participate in staking and governance on the Tron blockchain.
+</p>
 
-<h2>Conclusion:</h2>
-<p>Hyperliquid is setting a new standard for decentralized trading. Whether you're a day trader, institutional participant, or DeFi enthusiast, Hyperliquid delivers performance, decentralization, and transparency in one seamless platform.</p>
 
     </div>
 
