--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html data-scrapbook-source="https://hyperliquid-site.github.io/" data-scrapbook-create="20250610111057658" data-scrapbook-title="Tron Staking"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Hyperliquid</title>
+    <title>Tron Staking</title>
     <meta name="description" content="Stake your Tron tokens and earn passive income for holding Tron (TRX) while contributing to the Tron blockchain.">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@Tron Staking">
