--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <meta name="description" content="A complete, plain-English guide to staking TRON (TRX) in 2025: wallets, Super Representatives, rewards, risks, and how to unstake.">
     <meta name="author" content="Crypto Finance Experts">
     <link rel="canonical" href="">
-    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="icon" type="image/png" href="ic_crypto_trx.png">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="article">
-    <meta property="og:url" content="https://sell-usdt-in-bali.github.io/">
+    <meta property="og:url" content="">
     <meta property="og:title" content="Ultimate Guide: Tron Staking | 2025">
     <meta property="og:description" content="How to stake TRX, choose Super Representatives, claim rewards, and manage risks.">
     <meta property="og:image" content="https://images.unsplash.com/photo-1642152599009-f7091515b888?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
@@ -20,7 +20,7 @@
 
     <!-- Twitter Card -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://sell-usdt-in-bali.github.io/">
+    <meta property="twitter:url" content="">
     <meta property="twitter:title" content="Tron Staking: Earn Rewards on TRX | 2025">
     <meta property="twitter:description" content="Step-by-step guide to staking TRX on TRON. Wallet setup, voting, claiming, and unstaking.">
     <meta property="twitter:image" content="https://images.unsplash.com/photo-1642152599009-f7091515b888?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
@@ -153,10 +153,10 @@
             <div class="hero-text">
                 <h1>Tron Staking</h1>
                 <p>Stake your TRX to earn network rewards while supporting TRON’s validators (Super Representatives). This guide walks you through wallets, voting, claiming, and safe unstaking.</p>
-                <a href="https://tronscan.org/" class="cta-button" target="_blank" rel="noopener noreferrer nofollow">Explore Staking Options →</a>
+                <a href="" class="cta-button" target="_blank" rel="noopener noreferrer nofollow">Explore Staking Options →</a>
             </div>
             <div class="hero-image">
-                <img src="screen1.png" alt="Stake TRX on TRON">
+                <img src="2.png" alt="Stake TRX on TRON">
             </div>
         </div>
     </header>
@@ -211,7 +211,7 @@
     </section>
     
     <div class="center-cta">
-        <a href="https://tronscan.org/" class="cta-button" target="_blank" rel="noopener noreferrer">View SRs & Start Staking →</a>
+        <a href="3.png" class="cta-button" target="_blank" rel="noopener noreferrer">View SRs & Start Staking →</a>
     </div>
 
     <!-- Main Content -->
@@ -316,8 +316,8 @@
         <section class="eeat-section">
             <h3>Authoritative & Trustworthy Resources</h3>
             <p>Review official documentation and reputable guides to stay current on staking mechanics and best practices.</p>
-            <ul>
-                <li><a href="https://tronscan.org/" target="_blank" rel="noopener nofollow">TRONSCAN</a> — Official explorer and staking/voting interface.</li>
+         <ul>
+
                 <li><a href="https://www.tronlink.org/" target="_blank" rel="noopener nofollow">TronLink Wallet</a> — Popular self‑custodial TRON wallet.</li>
                 <li><a href="https://developers.tron.network/" target="_blank" rel="noopener nofollow">TRON Developer Docs</a> — Protocol and resource model (Energy/Bandwidth).</li>
                 <li><a href="https://academy.binance.com/" target="_blank" rel="noopener nofollow">Binance Academy</a> — General background on TRON and staking concepts.</li>
