--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
     </section>
     
     <div class="center-cta">
-        <a href="3.png" class="cta-button" target="_blank" rel="noopener noreferrer">View SRs & Start Staking →</a>
+        <a href="" class="cta-button" target="_blank" rel="noopener noreferrer">View SRs & Start Staking →</a>
     </div>
 
     <!-- Main Content -->
@@ -219,7 +219,7 @@
         
         <p>TRON uses a delegated proof-of-stake model where holders of <strong>TRX</strong> can stake (lock) their coins to receive voting power and delegate it to <strong>Super Representatives</strong> (SRs). In return, SRs share a portion of block rewards with voters. This guide focuses on practical steps to stake TRX safely, understand rewards, and plan for unstaking.</p>
 
-        <img src="screen2.png" alt="Tron staking overview">
+        <img src="2.png" alt="Tron staking overview">
 
         <h2>Ways to Stake TRX</h2>
         <p>You can stake natively with a self-custodial wallet, through exchanges, or via third‑party staking services. The best route depends on your priorities: control over keys, simplicity, or automation.</p>
