--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>Tron Staking | Ultimate 2025 Guide</title>
     <meta name="description" content="A complete, plain-English guide to staking TRON (TRX) in 2025: wallets, Super Representatives, rewards, risks, and how to unstake.">
     <meta name="author" content="Crypto Finance Experts">
-    <link rel="canonical" href="">
+    <link rel="canonical" href="http://tron-staking.com/">
     <link rel="icon" type="image/png" href="ic_crypto_trx.png">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="article">
-    <meta property="og:url" content="">
+    <meta property="og:url" content="http://tron-staking.com/">
     <meta property="og:title" content="Ultimate Guide: Tron Staking | 2025">
     <meta property="og:description" content="How to stake TRX, choose Super Representatives, claim rewards, and manage risks.">
     <meta property="og:image" content="https://images.unsplash.com/photo-1642152599009-f7091515b888?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
@@ -20,7 +20,7 @@
 
     <!-- Twitter Card -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="">
+    <meta property="twitter:url" content="http://tron-staking.com/">
     <meta property="twitter:title" content="Tron Staking: Earn Rewards on TRX | 2025">
     <meta property="twitter:description" content="Step-by-step guide to staking TRX on TRON. Wallet setup, voting, claiming, and unstaking.">
     <meta property="twitter:image" content="https://images.unsplash.com/photo-1642152599009-f7091515b888?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
@@ -153,7 +153,7 @@
             <div class="hero-text">
                 <h1>Tron Staking</h1>
                 <p>Stake your TRX to earn network rewards while supporting TRON’s validators (Super Representatives). This guide walks you through wallets, voting, claiming, and safe unstaking.</p>
-                <a href="" class="cta-button" target="_blank" rel="noopener noreferrer nofollow">Explore Staking Options →</a>
+                <a href="http://tron-staking.com/" class="cta-button" target="_blank" rel="noopener noreferrer ">Explore Tron Staking Options →</a>
             </div>
             <div class="hero-image">
                 <img src="1.png" alt="Stake TRX on TRON">
@@ -211,7 +211,7 @@
     </section>
     
     <div class="center-cta">
-        <a href="" class="cta-button" target="_blank" rel="noopener noreferrer">View SRs & Start Staking →</a>
+        <a href="http://tron-staking.com/" class="cta-button" target="_blank" rel="noopener noreferrer">View SRs & Start Staking →</a>
     </div>
 
     <!-- Main Content -->
